--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20190617071020.mdf;Initial Catalog=aspnet-WebApplication1-20190617071020;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ProductContolEntities" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WebApplication1.Models.ProductContolEntities;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Authentication" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\production-control\WebApplication1\WebApplication1\App_Data\Authentication.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AppData" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\production-control\WebApplication1\WebApplication1\App_Data\AppData.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
