--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\ProductControlEntities\201907071623184_InitialDatabaseCreation.Designer.cs">
       <DependentUpon>201907071623184_InitialDatabaseCreation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\ProductControlEntities\201907081626401_InitialDatabaseCreation1.cs" />
+    <Compile Include="Migrations\ProductControlEntities\201907081626401_InitialDatabaseCreation1.Designer.cs">
+      <DependentUpon>201907081626401_InitialDatabaseCreation1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\ProductControlEntities\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Areas\Location\Models\Customer.cs" />
@@ -295,6 +299,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\ProductControlEntities\201907071623184_InitialDatabaseCreation.resx">
       <DependentUpon>201907071623184_InitialDatabaseCreation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\ProductControlEntities\201907081626401_InitialDatabaseCreation1.resx">
+      <DependentUpon>201907081626401_InitialDatabaseCreation1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
