--- a/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AppData" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\production-control\WebApplication1\WebApplication1\App_Data\AppData.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AppData" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=F:\Sushchenya\Stratigy\production-control\WebApplication1\WebApplication1\App_Data\AppData.mdf;Integrated Security=True;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
